<?xml version="1.0"?>
<package format="1">
  <name>optitrack_humans</name>
  <version>0.0.1</version>
  <description>The optitrack_humans package</description>

  <maintainer email="ptsingaman@laas.fr">ptsingaman</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>human_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>human_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>


</package>
